tests/vertical-slice/accept/bytes_slice_open_right.hew
extern "C" {
    fn hew_bytes_from_str(s: string) -> bytes;
}

fn main() -> i64 {
    let b: bytes = unsafe { hew_bytes_from_str("abcdef") };
    let slice: bytes = b[2..];
    println(slice.to_string());
    slice.len()
}
