tests/vertical-slice/reject/move_into_array_string.hew
fn main() -> string {
    let s = "hello";
    let _values = [s, "anchor"];
    s
}
